# fastmcp-agent

./: .gitignore  .mcp.json  Dockerfile  README.md  agent.py  main.py  pyproject.toml  settings.py
