[project]
name = "fastmcp-agent"
version = "0.1.0"
description = "Placeholder uv project"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0.0",
    "langfuse>=3.0.0",
    "fastmcp>=0.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
]

[tool.uv]
# placeholder uv configuration for container usage
